numbat/tests/snapshots/prelude_and_examples__name_resolution_error_snapshots@function_name_clash2.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/name_resolution_error/function_name_clash2.nbt
---
error: identifier clash in definition
   ┌─ Module 'units::si', File [PRELUDE_FILE]:10:6
   │
10 │ unit metre: Length
   │      ----- Previously defined here
   │
   ┌─ <internal:3>:1:4
   │
 1 │ fn meter() = 2
   │    ^^^^^ identifier is already in use
